PyMaker/datas/object2/RawHTML/i5601/Python_DOC_referPages.error-with-python-saying-invalid-syntax-trying-to-create-list-of-struct.txt
<div class="post-text" itemprop="text">
<p>In key frames in Camera resectioning, I am trying to create a list of points that appears in a frame and then try to create a list containing the corresponding points in the following frames to keep tracking the points along the video to find the K matrix between them.</p>
<p>I have the following class to store the points from each frame and to create a list of points for each frame and tracking them along all frames.</p>
<pre><code>class PointsCorrespondence:
    """
    Stores the point of a specific index.
    """

    # A point is represented as (coordinate X, coordinate Y)
    Point = (float, float)

    # A point with corresponding same point is represented as (coordinates, index of the corresponding point or -1 if there is no corresponding point).
    PointWithCorrespondence = (Point, int)

    # Contains the points represented as one list of notable points for each frame.
    _pointsPerFrame : [[PointWithCorrespondence]]

    def __init__(self, pointsPerFrame : [[PointWithCorrespondence]]):
        self._pointsPerFrame = pointsPerFrame
</code></pre>
<p>when I try to run this code to store the points inside it, I got the following error:</p>
<blockquote>
<p>Traceback (most recent call last):   File "main.py", line 4, in
  
      import pointTracking   File "/home/k/Desktop/CV/project/insertc/project12345/pointTracking.py",
  line 17</p>
<pre><code>_pointsPerFrame : [[PointWithCorrespondence]]
                ^ SyntaxError: invalid syntax
</code></pre>
</blockquote>
<p>actually I don't know why I got that error, and I tried many things to check the python syntax styles.</p>
<p>I am using python 3.4 </p>
</div>
<div class="post-text" itemprop="text">
<p>Variable annotations are new in Python 3.6, see e.g. <a href="https://docs.python.org/3/whatsnew/3.6.html#whatsnew36-pep526" rel="nofollow noreferrer">what's new</a> and <a href="https://www.python.org/dev/peps/pep-0526/#class-and-instance-variable-annotations" rel="nofollow noreferrer">PEP-526</a>; you will need to upgrade to use this syntax. Note that you're assigning <em>values</em>, not annotating <em>types</em>, to the other two class attributes; this is presumably unintentional. </p>
</div>
<span class="comment-copy">Are you trying to define <i>types</i> there, or <i>values</i>? It's quite confusing. Which version of Python are you using?</span>
<span class="comment-copy">I use python 3.4.3 default version on ubuntu 14.04</span>
<span class="comment-copy">this is just the initialization of the variables I will use to store my point in</span>
<span class="comment-copy">Well: 1. that's a <i>class attribute</i>, which you don't actually need to "initialise" to set an <i>instance attribute</i>; and 2. you seem to be mixing up assigning <i>values</i> to those attributes (e.g. <code>(float, float)</code> is a two-tuple literal with the built-in float class as both elements) with specifying <i>types</i>, so please clarify the expected behaviour. Is your teammate also using 3.4.x?</span>
<span class="comment-copy">Possible duplicate of <a href="https://stackoverflow.com/questions/42002596/python-3-5-typed-namedtuple-syntax-produces-syntaxerror" title="python 3 5 typed namedtuple syntax produces syntaxerror">stackoverflow.com/questions/42002596/…</a></span>
